traversal.diagonal.traversaldiagonal.TraversalDiagonal.scala.error
Erreur de compilation :
TraversalDiagonal:20: error: ')' expected but ';' found.
      setPos(x+diag-7,y+(7- diag);
                                 ^TraversalDiagonal:22: error: ';' expected but integer literal found.
      cpt += 1;
             ^